--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,17 @@
 		"@emotion/styled": "^11.6.0",
 		"@material-ui/core": "^4.12.3",
 		"@mui/material": "^5.4.1",
+		"@reduxjs/toolkit": "^1.8.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"axios": "^0.26.0",
 		"leaflet": "^1.7.1",
 		"react": "^17.0.2",
 		"react-avatar": "^4.0.0",
 		"react-dom": "^17.0.2",
 		"react-leaflet": "^3.2.5",
+		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
 		"sass": "^1.39.0",
