--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
 		"@material-ui/core": "^4.12.3",
 		"@mui/material": "^5.4.1",
 		"@reduxjs/toolkit": "^1.8.0",
+		"@stripe/react-stripe-js": "^1.7.0",
+		"@stripe/stripe-js": "^1.25.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -20,6 +22,7 @@
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
+		"redux-persist": "^6.0.0",
 		"sass": "^1.39.0",
 		"web-vitals": "^1.0.1"
 	},
