--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@material-ui/core": "^4.12.3",
+		"@mui/icons-material": "^5.6.1",
 		"@mui/material": "^5.4.1",
 		"@reduxjs/toolkit": "^1.8.0",
 		"@stripe/react-stripe-js": "^1.7.0",
@@ -14,9 +15,12 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.26.0",
+		"chart.js": "^3.7.1",
 		"leaflet": "^1.7.1",
+		"moment": "^2.29.2",
 		"react": "^17.0.2",
 		"react-avatar": "^4.0.0",
+		"react-chartjs-2": "^4.1.0",
 		"react-dom": "^17.0.2",
 		"react-leaflet": "^3.2.5",
 		"react-redux": "^7.2.6",
