--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
+		"recharts": "^2.1.9",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.39.0",
 		"web-vitals": "^1.0.1"
