--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,23 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@date-io/date-fns": "^2.13.1",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
-		"@material-ui/core": "^4.12.3",
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/icons": "^4.11.3",
 		"@mui/icons-material": "^5.6.1",
-		"@mui/material": "^5.4.1",
+		"@mui/material": "^5.8.2",
+		"@mui/x-date-pickers": "^5.0.0-alpha.1",
 		"@reduxjs/toolkit": "^1.8.0",
 		"@stripe/react-stripe-js": "^1.7.0",
-		"@stripe/stripe-js": "^1.25.0",
+		"@stripe/stripe-js": "^1.31.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.26.0",
 		"chart.js": "^3.7.1",
+		"date-fns": "^2.28.0",
 		"leaflet": "^1.7.1",
 		"moment": "^2.29.2",
 		"react": "^17.0.2",
